Modified newPatentForm to select from a list of exising clients as opposed to manually inputting a client ID

--- a/public/templates/patentManager.html
+++ b/public/templates/patentManager.html
@@ -89,11 +89,11 @@
             </thead>
             <tbody>
             <tr ng-repeat='patent in vm.patents'>
-              <td>{{patent.clientId}}.{{patent.clientDocketNumber}}{{patent.country | uppercase}}</td>
+              <td>{{patent.clientId}}_{{patent.docketNumber}}_{{patent.country | uppercase}}</td>
               <td>{{patent.clientId}}</td>
               <td>{{patent.applicationType}}</td>
               <td>{{patent.englishTitle}}</td>
-              <td>Date</td>
+              <td>{{patent.filingDate}}</td>
             </tr>
           </tbody>
         </table>
