Added complete button for events

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -40,3 +40,7 @@ textarea {
 .multiselect-parent, .btn-group, .dropdown-multiselect button{
   width:100%;
 }
+
+.panel-body{
+  padding-bottom:0px;
+}
