--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -50,3 +50,15 @@ textarea {
     width: 100%;
     height: 75vh;
   }
+
+.progress {
+    margin-bottom:10px;
+    margin-top: 15px;
+    display:block;
+    border: 3px #CCC;
+}
+
+.progress div {
+    background: #3c8dbc;
+    width: 0;
+}
